--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,10 @@ build/
 !**/src/test/**/build/
 
 ### IntelliJ IDEA ###
-.idea/
+.idea/modules.xml
+.idea/jarRepositories.xml
+.idea/compiler.xml
+.idea/libraries/
 *.iws
 *.iml
 *.ipr
@@ -37,5 +40,3 @@ bin/
 
 ### Mac OS ###
 .DS_Store
-.rar
-.zip
